--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,49 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_primary">#003E31</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#277A65</color>
+    <color name="md_theme_onPrimaryContainer">#FFFFFF</color>
+    <color name="md_theme_secondary">#0A3F18</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#46784A</color>
+    <color name="md_theme_onSecondaryContainer">#FFFFFF</color>
+    <color name="md_theme_tertiary">#003863</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#476F9E</color>
+    <color name="md_theme_onTertiaryContainer">#FFFFFF</color>
+    <color name="md_theme_error">#5E2419</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#A1594A</color>
+    <color name="md_theme_onErrorContainer">#FFFFFF</color>
+    <color name="md_theme_background">#F5FBF6</color>
+    <color name="md_theme_onBackground">#171D1B</color>
+    <color name="md_theme_surface">#F4FBF8</color>
+    <color name="md_theme_onSurface">#0C1211</color>
+    <color name="md_theme_surfaceVariant">#DAE5E2</color>
+    <color name="md_theme_onSurfaceVariant">#2E3836</color>
+    <color name="md_theme_outline">#4B5453</color>
+    <color name="md_theme_outlineVariant">#656F6D</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#2B3230</color>
+    <color name="md_theme_inverseOnSurface">#ECF2F0</color>
+    <color name="md_theme_inversePrimary">#87D6BD</color>
+    <color name="md_theme_primaryFixed">#277A65</color>
+    <color name="md_theme_onPrimaryFixed">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim">#00614E</color>
+    <color name="md_theme_onPrimaryFixedVariant">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed">#46784A</color>
+    <color name="md_theme_onSecondaryFixed">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim">#2D5F34</color>
+    <color name="md_theme_onSecondaryFixedVariant">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed">#476F9E</color>
+    <color name="md_theme_onTertiaryFixed">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim">#2C5784</color>
+    <color name="md_theme_onTertiaryFixedVariant">#FFFFFF</color>
+    <color name="md_theme_surfaceDim">#C1C8C6</color>
+    <color name="md_theme_surfaceBright">#F4FBF8</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#EFF5F3</color>
+    <color name="md_theme_surfaceContainer">#E3EAE7</color>
+    <color name="md_theme_surfaceContainerHigh">#D8DEDC</color>
+    <color name="md_theme_surfaceContainerHighest">#CCD3D1</color>
 </resources>
