Design: 홈 화면 UI

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,5 +4,6 @@
     android:id="@+id/fragment_container_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StartActivity"
-    android:name="androidx.navigation.fragment.NavHostFragment" />
+    android:name="androidx.navigation.fragment.NavHostFragment"
+    android:background="@drawable/gradient_start"
+    tools:context=".StartActivity" />
