--- a/app/src/main/res/menu/menu_bottom_navigation_view_main.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view_main.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/calendarItem"
         android:icon="@android:drawable/ic_menu_my_calendar"
-        android:title="Calendar" />
+        android:title="@string/main_menu_calendar" />
+
     <item
         android:id="@+id/homeItem"
         android:icon="@drawable/ic_home"
-        android:title="Home" />
+        android:title="@string/main_menu_home" />
+
     <item
         android:id="@+id/accountItem"
         android:icon="@drawable/ic_account"
-        android:title="Account" />
+        android:title="@string/main_menu_account" />
+
 </menu>
