Refactor: ui 패키지 구조 변경 및 아이콘 추가

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/gradient_start"
-    tools:context=".ui.LogInFragment">
+    tools:context=".ui.start.LogInFragment">
 
     <Space
         android:layout_width="0dp"
