--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/gradient_start"
-    tools:context=".ui.StartFragment">
+    tools:context=".ui.start.StartFragment">
     
     <Space
         android:layout_width="0dp"
