--- a/app/src/main/res/menu/menu_bottom_navigation_view_main.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view_main.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/calendarItem"
-        android:icon="@android:drawable/ic_menu_my_calendar"
+        android:icon="@drawable/ic_calendar"
         android:title="@string/main_menu_calendar" />
 
     <item
