--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:scrollbars="none"
     tools:context=".ui.start.LogInFragment">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="home" />
+        android:padding="16dp"
+        android:orientation="vertical">
 
-</FrameLayout>
+        <Button
+            android:id="@+id/button_testAssignment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Test Assignment" />
+
+    </LinearLayout>
+
+</ScrollView>
