--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -1,59 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginVertical="8dp"
     android:layout_marginHorizontal="16dp"
+    android:padding="16dp"
     app:cardCornerRadius="12dp"
     app:cardElevation="2dp"
     android:background="#F2F2F2">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="12dp">
+    <TextView
+        android:id="@+id/textView_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Midterm Assignment"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/textView_state"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/assingnmentTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Midterm Assignment"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/assignmentStatus"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/textView_state"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="3 days"
+        android:textSize="13sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/holo_red_dark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/textView_title"
+        android:layout_marginTop="17dp"/>
 
-        <TextView
-            android:id="@+id/assignmentStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3 days"
-            android:textSize="13sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/holo_red_dark"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/assingnmentTitle"
-            android:layout_marginTop="17dp"/>
-
-        <!-- 과목명 및 유형 -->
-        <TextView
-            android:id="@+id/assignmentSubtitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Mobile App Programming Lab - Assignment"
-            android:textSize="12sp"
-            android:textColor="#666666"
-            app:layout_constraintStart_toStartOf="@id/assingnmentTitle"
-            app:layout_constraintTop_toBottomOf="@id/assingnmentTitle"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.3" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
+    <TextView
+        android:id="@+id/textView_subTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Mobile App Programming Lab - Assignment"
+        android:textSize="12sp"
+        android:textColor="#666666"
+        app:layout_constraintTop_toBottomOf="@id/textView_title"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/textView_state"
+        app:layout_constraintVertical_bias="0.3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
