--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -1,51 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:layout_marginVertical="8dp"
     android:layout_marginHorizontal="16dp"
-    android:padding="16dp"
     app:cardCornerRadius="12dp"
-    app:cardElevation="2dp"
-    android:background="#F2F2F2">
+    app:cardElevation="0dp">
 
-    <TextView
-        android:id="@+id/textView_title"
-        android:layout_width="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Midterm Assignment"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/textView_state"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="?attr/colorSurfaceContainerHigh"
+        android:padding="16dp">
 
-    <TextView
-        android:id="@+id/textView_state"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3 days"
-        android:textSize="13sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/holo_red_dark"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/textView_title"
-        android:layout_marginTop="17dp"/>
+        <TextView
+            android:id="@+id/textView_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/textView_state"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="?attr/colorOnSurfaceVariant"
+            android:text="Midterm Assignment" />
 
-    <TextView
-        android:id="@+id/textView_subTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Mobile App Programming Lab - Assignment"
-        android:textSize="12sp"
-        android:textColor="#666666"
-        app:layout_constraintTop_toBottomOf="@id/textView_title"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/textView_state"
-        app:layout_constraintVertical_bias="0.3" />
+        <TextView
+            android:id="@+id/textView_subTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/textView_title"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/textView_state"
+            app:layout_constraintVertical_bias="0.3"
+            android:textSize="12sp"
+            android:textColor="?attr/colorOnSurfaceVariant"
+            android:text="Mobile App Programming Lab - Assignment" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/textView_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:textColor="?attr/colorError"
+            android:text="3 days" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
