Feat: Firebase 연동 및 테스트

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -1,13 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".ui.start.LogInFragment">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="calendar" />
 
-</FrameLayout>
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="16dp" />
+
+    <TextView
+        android:id="@+id/textView_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="calendar" />
+
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="16dp" />
+
+    <Button
+        android:id="@+id/button_test1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TEST1" />
+
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="16dp" />
+
+    <Button
+        android:id="@+id/button_test2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TEST2" />
+
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="16dp" />
+
+    <Button
+        android:id="@+id/button_test3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TEST3" />
+
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="16dp" />
+
+    <Button
+        android:id="@+id/button_test4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TEST4" />
+
+</LinearLayout>
